# Cplusplus

./: .gitignore  README.md
BombermanSimple/: BombermanSimple.sln  README
BombermanSimple/BombermanSimple/: BombermanSimple.vcxproj  BombermanSimple.vcxproj.filters
BombermanSimple/source/: Bomb.cpp  Bomb.h  Cell.cpp  Cell.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameMode.cpp  Player.cpp  Player.h  Texture.cpp  Texture.h  Vector2.cpp  Vector2.h  Window.cpp  Window.h  main.cpp
Box2D/: CMakelists.txt  README  conanfile.txt
Box2D/include/: BoxCollider.h  Common.h  OGLProgram.h  OGLQuadRenderer.h  OGLTexture.h  Physics2D.h  PlatformScene.h  Quad.h  RigidBody2D.h  ServiceLocator.h  Window.h
Box2D/src/: BoxCollider.cpp  OGLProgram.cpp  OGLTexture.cpp  Physics2D.cpp  PlatformScene.cpp  RigidBody2D.cpp  Window.cpp  main.cpp
C++Basics/: README
C++Basics/C++Basics/: C++Basics.vcxproj  main.cpp  window.cpp  window.h
C++_Exercises/: C++_Exercises.sln  README
CMAKE/: CMAKE Infos.txt  README
CMAKE/FirstApp/: CMakeLists.txt
CMAKE/FirstApp/src/: main.cpp  mylib.cpp
Chip-8/: .gitignore  Chip-8 Emulator.sln  README
Chip8/: .gitignore  Chip8.sln
Chip8/Chip8/: Chip8.vcxproj  (+1 more)
ConsoleProject/: ConsoleProject.sln  README
Ctors/: Ctors.sln  README
DirectX/: README
IndianaTextBad/: IndianaTextBad.cpp  IndianaTextBad.sln  IndianaTextBad.vcxproj  IndianaTextBad.vcxproj.filters  README
Object Oriented Design/: Facade.cpp  OODTryout.cpp  OODTryout.sln  OODTryout.vcxproj  OODTryout.vcxproj.filters  README  Strategy.cpp  Visitor.cpp
Threads/: README  Threads.sln
(+57 files in other folders)
